--- a/scss/main.scss
+++ b/scss/main.scss
@@ -4,6 +4,10 @@
     margin: 0;
     padding: 0;
 }
+//ADD OVERFLOWWRAP FOR FIX ISSUE ON SMALL SCREEN//
+html, body, .overflowWrap {
+    overflow-x: hidden;
+}
 body {
     font-family: 'Dosis', sans-serif;
     overflow-x: hidden;
@@ -22,10 +26,10 @@ header {
     width: 100%;
     #logo {
        img {
-           width: 120px;
+           width: 110px;
            display: block;
            padding-left: 1rem;
-           margin: .5rem 0 0 .2rem;
+           margin: .8rem 0 0 .2rem;
        }
     }
 }
